--- a/.github/workflows/.docker-build.yml
+++ b/.github/workflows/.docker-build.yml
@@ -62,6 +62,7 @@ jobs:
                 restart: always
                 expose:
                   - 8000
+                command : uvicorn main:app --host 0.0.0.0 --port 8000
               
               nginx:
                 image: nginx:latest
