--- a/.github/workflows/.docker-build.yml
+++ b/.github/workflows/.docker-build.yml
@@ -59,7 +59,7 @@ jobs:
               app:
                 image: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
                 container_name: fastapi-app
-                restart: no
+                restart: "no"
                 expose:
                   - 8000
                 command : uvicorn main:app --host 0.0.0.0 --port 8000
