--- a/.github/workflows/.docker-build.yml
+++ b/.github/workflows/.docker-build.yml
@@ -65,12 +65,22 @@ jobs:
                 command: uvicorn main:app --host 0.0.0.0 --port 8000
             EOL
             
-            # Set up Nginx site configuration for your domain
+            # Set up Nginx site configuration for your domain with both HTTP and HTTPS
             cat > /etc/nginx/sites-available/$DOMAIN << EOL
             server {
                 listen 80;
                 server_name $DOMAIN;
-                
+                # Redirect HTTP to HTTPS
+                location / {
+                    return 301 https://\$host\$request_uri;
+                }
+            }
+
+            server {
+                listen 443 ssl;
+                server_name $DOMAIN;
+                ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;
+                ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
                 location / {
                     proxy_pass http://127.0.0.1:8000;
                     proxy_set_header Host \$host;
@@ -85,7 +95,7 @@ jobs:
             ln -sf /etc/nginx/sites-available/$DOMAIN /etc/nginx/sites-enabled/
             
             # Check nginx config syntax
-            nginx -t
+            nginx -t || echo "Nginx configuration error - check your SSL certificates"
             
             # Pull the latest image
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
@@ -103,13 +113,35 @@ jobs:
             docker-compose down --remove-orphans || true
             docker-compose up -d
             
-            # Reload Nginx to apply the new configuration
-            systemctl reload nginx
-            
             # Add SSL with Certbot (if not already configured)
             if [ ! -f /etc/letsencrypt/live/$DOMAIN/fullchain.pem ]; then
+              # Temporarily replace the SSL config with HTTP-only
+              cat > /etc/nginx/sites-available/$DOMAIN << EOL
+              server {
+                  listen 80;
+                  server_name $DOMAIN;
+                  
+                  location / {
+                      proxy_pass http://127.0.0.1:8000;
+                      proxy_set_header Host \$host;
+                      proxy_set_header X-Real-IP \$remote_addr;
+                      proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                      proxy_set_header X-Forwarded-Proto \$scheme;
+                  }
+              }
+              EOL
+              
+              # Reload Nginx to apply HTTP-only config
+              nginx -t && systemctl reload nginx
+              
+              # Now run certbot to get the certificate
               certbot --nginx -d $DOMAIN --non-interactive --agree-tos --email ${{ secrets.ADMIN_EMAIL }}
+              
+              # Certbot will automatically update the config to include HTTPS
             fi
+            
+            # Final Nginx reload to apply all changes
+            systemctl reload nginx
             
             echo "Deployment complete! Your application should be available at https://$DOMAIN"
             echo "If you haven't set up DNS yet, please create an A record for $DOMAIN pointing to $(curl -s ifconfig.me)"
